--- a/rb_customer.html
+++ b/rb_customer.html
@@ -7,8 +7,8 @@
       Review Assignment
 
       Red Ball Pizza Customer Information
-      Author: 
-      Date:   
+      Author: Rami Hadey
+      Date:   12/3/19
 
       Filename:   rb_customer.html
 
@@ -19,6 +19,9 @@
    <title>Red Ball Pizza Customer Form</title>
    <link href="rb_base.css" rel="stylesheet" />
    <link href="rb_styles2.css" rel="stylesheet" />
+   <link href="rb_forms2.css" rel="stylesheet" />
+   <link href="rb_validate.css" rel="stylesheet" />
+   <script src="rb_formsubmit2.js"></script>
 </head>
 
 <body>
@@ -44,6 +47,39 @@
          values are marked by an asterisk (*). If you
          want to place your order over the phone, call us at
          <a href="tel:+13865557499">(386) 555-7499</a>.</p>
+
+      <form action="http://www.example.com/redball/customer" method="Post">
+         <div>
+            <label for="nameBox">Name*</label>
+            <input required name="custName" id="nameBox" type="text" placeholder="First and Last Name" />
+         </div>
+         <div>
+            <label for="PhoneBox">Phone*</label>
+            <input required name="custPhone" pattern="^\d{10}$|^(\(\d{3}\)\s*)?\d{3}[\s-]?\d{4}$
+            " id="phoneBox" type="tel" placeholder="(nnn) nnn-nnnn" />
+         </div>
+         <div>
+            <input name="orderType" id="delivery" type="radio" checked />
+            <label for="delivery">Delivery</label>
+            <input name="orderType" id="pickup" type="radio" />
+            <label for="pickup">pickup</label>
+         </div>
+         <fieldset id="deliveryInfo">
+            <legend>Delivery Options</legend>
+            <textarea id="addressBox" name="delAddress" placeholder="Enter Delivery Address"></textarea>
+            <label for="delBox">Delivery Time (leave blank for earliest delivery)</label>
+            <input name="delTime" id="delBox" type="time" />
+         </fieldset>
+         <fieldset id="pickupInfo">
+            <legend>Pickup Options</legend>
+            <label for="pickupBox">Pickup Time (leave blank for earliest pickup)</label>
+            <input name="pickupTime" id="pickupBox" type="time" disabled type="time" />
+         </fieldset>
+
+         <div>
+            <input type="submit" value="Begin Building your Order">
+         </div>
+      </form>
          
          
    </section>
